--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
         </div>
     </div>
     
-    <script src="scripts/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
